# email-verifier

./: Cargo.toml  README.md
examples/: fetch-email-data.rs
src/: lib.rs
tests/: email_domain_test.rs  fetch_data_test.rs
