[package]
name = "email-verifier"
version = "0.1.2"
edition = "2021"
authors = ["Mintype"]
description = "A simple Rust crate to verify email addresses."
repository = "https://github.com/Mintype/email-verifier"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
